fixed blurry text issue on campaign in

--- a/admin-dev/themes/default/css/admin-campaign-bar/admin-campaign-bar.css
+++ b/admin-dev/themes/default/css/admin-campaign-bar/admin-campaign-bar.css
@@ -208,11 +208,11 @@
         transform: scale(1.05);
     }
 
-    99% {
+    70% {
         transform: scale(1);
     }
 
-    100% {
+    80% {
         transform: unset;
     }
 }
